# mod_revocator

./: Makefile  README.md  mod_revocator-clean-semaphore.patch  mod_revocator-man.patch  mod_revocator.spec
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  anchor.cpp  client.cpp  client.h  client_err.h  configure  configure.in  constants.c  crlhelper.cpp  crlmanager.cpp  crlmanager.h  download.h  encode.cpp  encode.h  exec-client.cpp  http-client.cpp  ldap-client.cpp  ldapget.cpp  ldaptest.cpp  libtool-version  mkinstalldirs  mod_rev.c  mod_rev.h  nsprstub.cpp  pkcs11layer.h  rev_core.cpp  rev_core.h  reverror.h  revhelper.cpp  revocation.cpp  revocation.h  revocator.conf  revprivate.h  rfind.cpp  rinst.cpp  robject.cpp  (+6 more)
src/docs/: mod_revocator.html
src/mozilla/: README
src/mozilla/security/nss/lib/base/: base.h  baset.h  nssbase.h  nssbaset.h
src/mozilla/security/nss/lib/ckfw/: ck.api  ck.h  ckapi.perl  ckfw.h  ckfwm.h  ckfwtm.h  ckmd.h  nssck.api  nssckfw.h  nssckfwc.h  nssckfwt.h  nssckmdt.h
